Fix landing page bug where it would not display on mobile devices (%->vh/vw)

--- a/src/web/src/css/landing.css
+++ b/src/web/src/css/landing.css
@@ -15,8 +15,8 @@ body {
 
 #landing-main-container {
     position: fixed;
-    top: 50%;
-    left: 50%;
+    top: 50vh;
+    left: 50vw;
     transform: translate(-50%, -50%);
     border: 1px dashed yellow;
     background-color: black;
